# protonolysis

./: .gitignore  Cargo.toml  README.md  index.html  protonolysis.js  protonolysis_bg.wasm  rust-toolchain.toml
.github/workflows/: pages.yml
src/: main.rs  numerics.rs  peak.rs  protonolysis.rs  ui.rs  utils.rs
src/numerics/: distribution.rs  error_function.rs  gaussian.rs  gaussian_sum.rs
src/numerics/distribution/: distribution_sum.rs  gaussian.rs  lorentzian.rs
src/peak/: multiplet_cascade.rs
src/ui/: animation.rs  plotting_utils.rs  splitting_diagram.rs  utils.rs
