[package]
name = "protonolysis"
version = "0.1.0"
authors = ["Alvin Q. Meng <alvin.q.meng@gmail.com>"]
description = "An NMR splitting pattern visualization tool"
license = "GPL-3.0"
edition = "2021"
repository = "https://github.com/al2me6/protonolysis"
readme = "README.md"

[dependencies]
approx = "0.5.1"
eframe = { version = "0.21.3", default-features = false, features = ["wgpu"] }
egui_extras = "0.21.0"
instant = { version = "0.1.12", features = ["wasm-bindgen"] }
itertools = "0.10.5"
maplit = "1.0.2"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = "0.3.17"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
tracing-wasm = "0.2"
wasm-bindgen-futures = "0.4"
