[package]
name = "protonolysis"
version = "0.1.0"
authors = ["Alvin Q. Meng <alvin.q.meng@gmail.com>"]
description = "An NMR splitting pattern visualization tool"
license = "GPL-3.0"
edition = "2021"
repository = "https://github.com/al2me6/protonolysis"
readme = "README.md"

[dependencies]
approx = "0.5"
eframe = { version = "0.22", default-features = false, features = ["wgpu"] }
egui_extras = "0.22"
itertools = "0.11"
log = "0.4"
maplit = "1.0"
wgpu = { version = "*", features = ["webgl"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.10"
image = { version = "0.24", default-features = false, features = ["png"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
